V4125: Overall update and fixing

--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/Details/D464.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/Details/D464.xaml
@@ -13,50 +13,35 @@
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="32" RenderTransformOrigin="0.5,0.5" StatusComponent="464-25-CV1" Canvas.Left="213" Canvas.Top="71">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="42" RenderTransformOrigin="0.5,0.5" StatusComponent="464-03-MA1" Canvas.Left="305" Canvas.Top="298">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="222" RenderTransformOrigin="0.5,0.5" StatusComponent="464-25-CV1" Canvas.Left="215" Canvas.Top="166">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="42" RenderTransformOrigin="0.5,0.5" StatusComponent="464-03-MA1" Canvas.Left="15" Canvas.Top="298">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="112" RenderTransformOrigin="0.5,0.5" StatusComponent="464-03-MA1" Canvas.Left="173" Canvas.Top="224">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -65,10 +50,7 @@
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil" Width="46" RenderTransformOrigin="0.5,0.5" StatusComponent="464-25-CV1" Canvas.Left="206" Canvas.Top="129">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
@@ -76,10 +58,7 @@
         <Rectangle HorizontalAlignment="Left" Height="2" Stroke="Black" VerticalAlignment="Center" Width="54" RenderTransformOrigin="0.5,0.5" Canvas.Left="92" Canvas.Top="74">
             <d:Rectangle.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </d:Rectangle.RenderTransform>
         </Rectangle>
@@ -87,20 +66,14 @@
         <Machines:V01_CV_Valve Canvas.Left="211" Canvas.Top="149" Height="30" Width="36" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:V01_CV_Valve.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:V01_CV_Valve.RenderTransform>
         </Machines:V01_CV_Valve>
         <Machines:V01_EXC_CoolingFan Canvas.Left="297" Canvas.Top="249" Height="28" Width="61" RenderTransformOrigin="0.5,0.5">
             <Machines:V01_EXC_CoolingFan.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:V01_EXC_CoolingFan.RenderTransform>
         </Machines:V01_EXC_CoolingFan>
@@ -109,20 +82,14 @@
         <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="258" Canvas.Top="338" HorizontalAlignment="Center" Height="20" VerticalAlignment="Top" Width="80" RenderTransformOrigin="0.5,0.5">
             <Machines:V01_SCW_ScrewConveyor_straight.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:V01_SCW_ScrewConveyor_straight.RenderTransform>
         </Machines:V01_SCW_ScrewConveyor_straight>
         <Machines:V01_CV_ValveDouble Canvas.Left="205" Canvas.Top="83" Height="33" Width="39" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:V01_CV_ValveDouble.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
                     <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
                 </TransformGroup>
             </Machines:V01_CV_ValveDouble.RenderTransform>
         </Machines:V01_CV_ValveDouble>
@@ -130,10 +97,10 @@
         <Labels:DeviceLabel ComponentName="464-03-PT1" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="74" Canvas.Top="26"/>
         <Labels:DeviceLabel ComponentName="464-05-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="355" Canvas.Top="238"/>
         <Labels:DeviceLabel ComponentName="464-03-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="50" Canvas.Top="201"/>
-        <Labels:DeviceLabel ComponentName="464-11-R1" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="188" Canvas.Top="319" />
+        <Labels:DeviceLabel ComponentName="464-11-R1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="188" Canvas.Top="336" />
         <Labels:DeviceLabel ComponentName="464-22-CV2" HorizontalAlignment="Left" VerticalAlignment="Center"  Canvas.Left="337" Canvas.Top="68"/>
         <Labels:DeviceLabel ComponentName="464-22-CV1" HorizontalAlignment="Left" VerticalAlignment="Center"  Canvas.Left="337" Canvas.Top="130"/>
         <Labels:DeviceLabel ComponentName="464-25-CV1" HorizontalAlignment="Left" VerticalAlignment="Center"  Canvas.Left="121" Canvas.Top="138"/>
-        <Labels:DeviceLabel ComponentName="464-42-TT1" HorizontalAlignment="Left" VerticalAlignment="Center"  Canvas.Left="85" Canvas.Top="318"/>
+        <Labels:DeviceLabel ComponentName="464-42-TT1" HorizontalAlignment="Left" VerticalAlignment="Top"  Canvas.Left="84" Canvas.Top="336"/>
     </Canvas>
 </UserControl>
