--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/Details/D510_2.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/Details/D510_2.xaml
@@ -11,10 +11,10 @@
              x:Class="Prevu.Synoptics.D510_2">
     <Canvas Height="276" Width="415" >
         <Labels:Pipe Width="64" Color="Oil" StatusComponent="510-21-CV1"  Canvas.Left="142" Canvas.Top="133" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="51" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="510-24-CV1" Canvas.Left="58" Canvas.Top="87" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="63" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="510-23-CV1" Canvas.Left="147" Canvas.Top="180" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="63" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="510-24-CV1" Canvas.Left="150" Canvas.Top="87" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="51" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="510-23-CV1" Canvas.Left="58" Canvas.Top="180" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="51" Color="Water" StatusComponent="529-01-MA1" Canvas.Left="58" Canvas.Top="87" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="63" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="510-23-CV1" Canvas.Left="147" Canvas.Top="180" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="63" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="510-24-CV1" Canvas.Left="150" Canvas.Top="87" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="51" Color="Water" StatusComponent="529-01-MA1" Canvas.Left="58" Canvas.Top="180" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_WaterPump Canvas.Left="113" Canvas.Top="100" Height="70" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Oil"/>
         <Machines:V01_CV_Valve Canvas.Left="106" Canvas.Top="64" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_CV_Valve Canvas.Left="106" Canvas.Top="157" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
