--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P110.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P110.xaml
@@ -58,15 +58,15 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="136" StatusComponent="118-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="1261" Canvas.Top="521" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="176" RenderTransformOrigin="0.5,0.5" StatusComponent="020-21-CV1" PipeHeight="Medium"  Canvas.Left="996" Canvas.Top="434" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="176" RenderTransformOrigin="0.5,0.5" StatusComponent="115-01-MA1" PipeHeight="Medium"  Canvas.Left="996" Canvas.Top="434" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="331" RenderTransformOrigin="0.5,0.5" StatusComponent="110-01-MA1" PipeHeight="Medium" Canvas.Left="578" Canvas.Top="204"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="88" RenderTransformOrigin="0.5,0.5" StatusComponent="020-21-CV1" PipeHeight="Medium"  Canvas.Left="105" Canvas.Top="167">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="331" RenderTransformOrigin="0.5,0.5" StatusComponent="110-02-MA1" PipeHeight="Medium" Canvas.Left="578" Canvas.Top="204"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="84" RenderTransformOrigin="0.5,0.5" StatusComponent="020-21-CV1" PipeHeight="Medium"  Canvas.Left="107" Canvas.Top="165">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -138,10 +138,10 @@
         <Labels:JumpLabel JumpFromLabel="110-01-MA1" JumpToLabel="236-01-MA1" Canvas.Left="208" Canvas.Top="47" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="110-01-MA1" JumpToLabel="291-01-MA1" Canvas.Left="234" Canvas.Top="239" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="101-01-MA1" JumpToLabel="283-01-MA1" Direction="Left" Canvas.Left="414" Canvas.Top="732" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="115-01-MA1" Canvas.Left="1108" Canvas.Top="161" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="115-02-MA1" Canvas.Left="1108" Canvas.Top="297"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="115-01-MA1" Canvas.Left="1108" Canvas.Top="204" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="115-02-MA1" Canvas.Left="1215" Canvas.Top="270"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="115-21-CV1" Canvas.Left="825" Canvas.Top="61" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="115-01-YA1" Canvas.Left="1108" Canvas.Top="227" />
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="115-01-YA1" Canvas.Left="1108" Canvas.Top="270" />
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="110-01-MA1" Canvas.Left="447" Canvas.Top="133"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="110-02-MA1" Canvas.Left="559" Canvas.Top="134"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="098-01-MA1" Canvas.Left="275" Canvas.Top="133"/>
