--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P464.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P464.xaml
@@ -59,7 +59,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Oil" Width="34" RenderTransformOrigin="0.5,0.5" StatusComponent="474-25-CV1" Canvas.Left="891" Canvas.Top="400" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Oil" Width="47" RenderTransformOrigin="0.5,0.5" StatusComponent="474-25-CV1" Canvas.Left="878" Canvas.Top="400" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="108" StatusComponent="474-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="942" Canvas.Top="495" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -233,9 +233,9 @@
         <Labels:DeviceLabel ComponentName="474-21-CV1" Canvas.Left="1353" Canvas.Top="381" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="474-02-MA1" Canvas.Left="1204" Canvas.Top="553" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="474-F-PRESS" Canvas.Left="1207" Canvas.Top="254" RenderTransformOrigin="0.6,0" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="474-23-CV1" Canvas.Left="817" Canvas.Top="378" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="474-23-CV1" Canvas.Left="836" Canvas.Top="314" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="470-01-MA1" Canvas.Left="1101" Canvas.Top="68" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DetailsLabel ComponentName="474-HYD" DetailsPageName="D474" Canvas.Left="836" Canvas.Top="444"  HorizontalAlignment="Left" VerticalAlignment="Top"  />
+        <Labels:DetailsLabel ComponentName="474-HYD" DetailsPageName="D474" Canvas.Left="836" Canvas.Top="376"  HorizontalAlignment="Center" VerticalAlignment="Center"  />
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="480-01-MA1" Canvas.Left="738" Canvas.Top="543"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="482-01-MA1" Canvas.Left="844" Canvas.Top="775"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="464-04-MA1" Canvas.Left="500" Canvas.Top="250"/>
@@ -244,13 +244,13 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="464-02-MA1" Canvas.Left="278" Canvas.Top="553"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="482-21-CV1" Canvas.Left="996" Canvas.Top="641"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="464-F-PRESS" Canvas.Left="279" Canvas.Top="254" RenderTransformOrigin="0.6,0"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="464-23-CV1" Canvas.Left="666" Canvas.Top="377"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="464-23-CV1" Canvas.Left="646" Canvas.Top="314"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="460-01-MA1" Canvas.Left="383" Canvas.Top="68"/>
-        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="464-HYD" DetailsPageName="D464" Canvas.Left="685" Canvas.Top="444"  />
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="460-01-MA1" JumpToLabel="430-01-MA1" Canvas.Left="17" Canvas.Top="20"/>
+        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="464-HYD" DetailsPageName="D464" Canvas.Left="685" Canvas.Top="376"  />
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="460-01-MA1" JumpToLabel="430-PADDLES" Canvas.Left="17" Canvas.Top="20"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="482-01-MA1" JumpToLabel="510-01-MA1" Canvas.Left="1115" Canvas.Top="705"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="460-01-MA1" JumpToLabel="440-01-MA1" Direction="Left" Canvas.Left="67" Canvas.Top="182"/>
-        <Labels:JumpLabel JumpFromLabel="470-01-MA1" JumpToLabel="430-01-MA1" Canvas.Left="1449" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left"/>
+        <Labels:JumpLabel JumpFromLabel="470-01-MA1" JumpToLabel="430-PADDLES" Canvas.Left="1449" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left"/>
         <Labels:JumpLabel JumpFromLabel="470-01-MA1" JumpToLabel="440-01-MA1" Canvas.Left="1427" Canvas.Top="186" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5"/>
     </Canvas>
 </UserControl>
