--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/OverallView.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/OverallView.xaml
@@ -12,39 +12,31 @@
              d:Background="{DynamicResource MaterialDesignPaper}" >
 
     <Canvas Height="4087" Width="6176">
-        <Labels:Pipe Canvas.Left="410" Canvas.Top="1604" Width="1262" Color="Water" StatusComponent="101-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="2768" Canvas.Top="240" PipeHeight="Medium" Width="306" StatusComponent="118-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="336" Canvas.Top="1678" Width="152" Color="Water" StatusComponent="101-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Labels:Pipe Canvas.Left="320" Canvas.Top="1604" Width="1352" Color="Water" StatusComponent="101-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="2768" Canvas.Top="225" PipeHeight="Medium" Width="305" StatusComponent="118-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="262" Canvas.Top="1662" Width="120" Color="Water" StatusComponent="101-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="1370" Canvas.Top="1729" Width="230" Color="Water" StatusComponent="291-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="1287" Canvas.Top="1812" Width="396" Color="Water" StatusComponent="291-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="1510" Canvas.Top="1940" Width="198" Color="Water" StatusComponent="291-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="1387" Canvas.Top="2101" Width="100" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="1448" Canvas.Top="2066" Width="74" Color="Water" StatusComponent="291-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="1483" Canvas.Top="1842" Width="128" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="1516" Canvas.Top="2131" Width="95" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="1572" Canvas.Top="2096" Width="74" Color="Water" StatusComponent="291-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="1546" Canvas.Top="1882" Width="336" Color="Water" StatusComponent="291-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="1561" Canvas.Top="1867" Width="306" Color="Water" StatusComponent="291-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -52,31 +44,30 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="1712" Canvas.Top="1715" Width="1138" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Canvas.Left="2598" Canvas.Top="546" Width="500" Color="Water" StatusComponent="291-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="2598" Canvas.Top="532" Width="500" Color="Water" StatusComponent="291-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2846" Canvas.Top="298" Width="112" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="2846" Canvas.Top="298" Width="112" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="1453" Canvas.Top="805" Width="1306" Color="Water" StatusComponent="236-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="1403" Canvas.Top="855" Width="104" Color="Water" StatusComponent="236-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="2846" Canvas.Top="284" Width="115" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="1453" Canvas.Top="790" Width="1306" Color="Water" StatusComponent="236-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Canvas.Left="1396" Canvas.Top="847" Width="118" Color="Water" StatusComponent="236-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2397" Canvas.Top="1265" Width="902" Color="Water" StatusComponent="291-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="2389" Canvas.Top="1257" Width="918" Color="Water" StatusComponent="291-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2786" Canvas.Top="805" Width="533" Color="Water" StatusComponent="236-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="2786" Canvas.Top="790" Width="533" Color="Water" StatusComponent="236-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Canvas.Left="5436" Canvas.Top="1360" PipeHeight="Medium" Width="994" RenderTransformOrigin="0.5,0.5" StatusComponent="430-01-MA4" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -134,14 +125,14 @@
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="4406" Canvas.Top="1593" Width="1416" Color="Water" StatusComponent="457-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="4297" Canvas.Top="829" PipeHeight="Medium" Width="273" StatusComponent="233-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="4128" Canvas.Top="540" Width="560" Color="Water" StatusComponent="457-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="4120" Canvas.Top="532" Width="576" Color="Water" StatusComponent="457-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="4226" Canvas.Top="262" Width="184" Color="Water" StatusComponent="457-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4227" Canvas.Top="246" Width="183" Color="Water" StatusComponent="457-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="2634" Canvas.Top="1994" Width="350" Color="Water" StatusComponent="460-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -169,7 +160,7 @@
         <Labels:Pipe Canvas.Left="5982" Canvas.Top="992" Width="57" Color="Water" StatusComponent="470-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="5943" Canvas.Top="992" Width="18" Color="Water" StatusComponent="470-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="5753" Canvas.Top="1397" Width="69" Color="Water" StatusComponent="457-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="2208" Canvas.Top="800" PipeHeight="Medium" Width="1130" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" StatusComponent="118-01-MA1">
+        <Labels:Pipe Canvas.Left="2201" Canvas.Top="793" PipeHeight="Medium" Width="1144" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" StatusComponent="118-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -184,14 +175,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="1516" Canvas.Top="2048" Width="200" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="1516" Canvas.Top="2018" Width="200" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <local:P020 CacheMode="BitmapCache" Canvas.Left="26" Canvas.Top="216" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P230 CacheMode="BitmapCache" Canvas.Left="2852" Canvas.Top="36" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P288 CacheMode="BitmapCache" Canvas.Left="138" Canvas.Top="1582" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P430 CacheMode="BitmapCache" Canvas.Left="4374" Canvas.Top="604" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P110 CacheMode="BitmapCache" Canvas.Left="1213" Canvas.Top="839" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P464 CacheMode="BitmapCache" Canvas.Left="2852" Canvas.Top="1953" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P510 CacheMode="BitmapCache" Canvas.Left="3666" Canvas.Top="2622" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P680 CacheMode="BitmapCache" Canvas.Left="4610" Canvas.Top="3200" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P510 CacheMode="BitmapCache" Canvas.Left="3706" Canvas.Top="2622" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P570 CacheMode="BitmapCache" Canvas.Left="4611" Canvas.Top="3200" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
     </Canvas>
 </UserControl>
